package dash

import (
	"fmt"
	"os"
	"time"

	"github.com/seaweedfs/seaweedfs/weed/glog"
)

// MaintenanceWorkerService manages maintenance task execution
type MaintenanceWorkerService struct {
	workerID      string
	address       string
	adminServer   string
	capabilities  []MaintenanceTaskType
	maxConcurrent int
	currentTasks  map[string]*MaintenanceTask
	queue         *MaintenanceQueue
	adminClient   *AdminServer
	running       bool
	stopChan      chan struct{}
}

// NewMaintenanceWorkerService creates a new maintenance worker service
func NewMaintenanceWorkerService(workerID, address, adminServer string) *MaintenanceWorkerService {
	return &MaintenanceWorkerService{
		workerID:      workerID,
		address:       address,
		adminServer:   adminServer,
		capabilities:  []MaintenanceTaskType{TaskTypeVacuum, TaskTypeErasureCoding, TaskTypeRemoteUpload, TaskTypeFixReplication, TaskTypeBalance, TaskTypeClusterReplication},
		maxConcurrent: 2, // Default concurrent task limit
		currentTasks:  make(map[string]*MaintenanceTask),
		stopChan:      make(chan struct{}),
	}
}

// Start begins the worker service
func (mws *MaintenanceWorkerService) Start() error {
	mws.running = true

	// Register with admin server
	worker := &MaintenanceWorker{
		ID:            mws.workerID,
		Address:       mws.address,
		Capabilities:  mws.capabilities,
		MaxConcurrent: mws.maxConcurrent,
	}

	if mws.queue != nil {
		mws.queue.RegisterWorker(worker)
	}

	// Start worker loop
	go mws.workerLoop()

	glog.Infof("Maintenance worker %s started at %s", mws.workerID, mws.address)
	return nil
}

// Stop terminates the worker service
func (mws *MaintenanceWorkerService) Stop() {
	mws.running = false
	close(mws.stopChan)

	// Wait for current tasks to complete or timeout
	timeout := time.NewTimer(30 * time.Second)
	defer timeout.Stop()

	for len(mws.currentTasks) > 0 {
		select {
		case <-timeout.C:
			glog.Warningf("Worker %s stopping with %d tasks still running", mws.workerID, len(mws.currentTasks))
			return
		case <-time.After(time.Second):
			// Check again
		}
	}

	glog.Infof("Maintenance worker %s stopped", mws.workerID)
}

// workerLoop is the main worker event loop
func (mws *MaintenanceWorkerService) workerLoop() {
	heartbeatTicker := time.NewTicker(30 * time.Second)
	defer heartbeatTicker.Stop()

	taskRequestTicker := time.NewTicker(5 * time.Second)
	defer taskRequestTicker.Stop()

	for mws.running {
		select {
		case <-mws.stopChan:
			return
		case <-heartbeatTicker.C:
			mws.sendHeartbeat()
		case <-taskRequestTicker.C:
			mws.requestTasks()
		}
	}
}

// sendHeartbeat sends heartbeat to admin server
func (mws *MaintenanceWorkerService) sendHeartbeat() {
	if mws.queue != nil {
		mws.queue.UpdateWorkerHeartbeat(mws.workerID)
	}
}

// requestTasks requests new tasks from the admin server
func (mws *MaintenanceWorkerService) requestTasks() {
	if len(mws.currentTasks) >= mws.maxConcurrent {
		return // Already at capacity
	}

	if mws.queue != nil {
		task := mws.queue.GetNextTask(mws.workerID, mws.capabilities)
		if task != nil {
			mws.executeTask(task)
		}
	}
}

// executeTask executes a maintenance task
func (mws *MaintenanceWorkerService) executeTask(task *MaintenanceTask) {
	mws.currentTasks[task.ID] = task

	go func() {
		defer func() {
			delete(mws.currentTasks, task.ID)
		}()

		glog.Infof("Worker %s executing task %s: %s", mws.workerID, task.ID, task.Type)

		var err error
		switch task.Type {
		case TaskTypeVacuum:
			err = mws.executeVacuumTask(task)
		case TaskTypeErasureCoding:
			err = mws.executeECTask(task)
		case TaskTypeRemoteUpload:
			err = mws.executeRemoteUploadTask(task)
		case TaskTypeFixReplication:
			err = mws.executeReplicationTask(task)
		case TaskTypeBalance:
			err = mws.executeBalanceTask(task)
		case TaskTypeClusterReplication:
			err = mws.executeClusterReplicationTask(task)
		default:
			err = fmt.Errorf("unsupported task type: %s", task.Type)
		}

		// Report task completion
		if mws.queue != nil {
			errorMsg := ""
			if err != nil {
				errorMsg = err.Error()
			}
			mws.queue.CompleteTask(task.ID, errorMsg)
		}

		if err != nil {
			glog.Errorf("Worker %s failed to execute task %s: %v", mws.workerID, task.ID, err)
		} else {
			glog.Infof("Worker %s completed task %s successfully", mws.workerID, task.ID)
		}
	}()
}

// executeVacuumTask executes a vacuum operation
func (mws *MaintenanceWorkerService) executeVacuumTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// Use the admin client to perform vacuum operation
	if mws.adminClient != nil {
		mws.updateTaskProgress(task.ID, 30)

		err := mws.adminClient.VacuumVolume(int(task.VolumeID), task.Server)
		if err != nil {
			return fmt.Errorf("vacuum operation failed: %v", err)
		}

		mws.updateTaskProgress(task.ID, 90)
		glog.V(2).Infof("Vacuum task %s completed successfully", task.ID)
	} else {
		return fmt.Errorf("admin client not available")
	}

	mws.updateTaskProgress(task.ID, 100)
	return nil
}

// executeECTask executes an erasure coding conversion
func (mws *MaintenanceWorkerService) executeECTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// This would integrate with SeaweedFS EC operations
	// For now, simulate the operation
	glog.V(2).Infof("Executing EC conversion for volume %d on server %s", task.VolumeID, task.Server)

	// Simulate EC conversion process
	for progress := 20; progress < 100; progress += 20 {
		mws.updateTaskProgress(task.ID, float64(progress))
		time.Sleep(5 * time.Second) // Simulate work
	}

	mws.updateTaskProgress(task.ID, 100)
	return nil
}

// executeRemoteUploadTask executes a remote storage upload
func (mws *MaintenanceWorkerService) executeRemoteUploadTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// This would integrate with SeaweedFS remote storage operations
	glog.V(2).Infof("Executing remote upload for volume %d on server %s", task.VolumeID, task.Server)

	// Simulate remote upload process
	for progress := 20; progress < 100; progress += 15 {
		mws.updateTaskProgress(task.ID, float64(progress))
		time.Sleep(3 * time.Second) // Simulate upload
	}

	mws.updateTaskProgress(task.ID, 100)
	return nil
}

// executeReplicationTask executes a replication fix operation
func (mws *MaintenanceWorkerService) executeReplicationTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// This would integrate with SeaweedFS replication operations
	glog.V(2).Infof("Executing replication fix for volume %d on server %s", task.VolumeID, task.Server)

	// Get expected and actual replica counts from task parameters
	expectedReplicas, _ := task.Parameters["expected_replicas"].(int)
	actualReplicas, _ := task.Parameters["actual_replicas"].(int)

	mws.updateTaskProgress(task.ID, 30)

	if actualReplicas < expectedReplicas {
		// Need to add replicas
		glog.V(2).Infof("Adding %d replicas for volume %d", expectedReplicas-actualReplicas, task.VolumeID)
		// Simulate replica addition
		time.Sleep(10 * time.Second)
	} else if actualReplicas > expectedReplicas {
		// Need to remove replicas
		glog.V(2).Infof("Removing %d replicas for volume %d", actualReplicas-expectedReplicas, task.VolumeID)
		// Simulate replica removal
		time.Sleep(5 * time.Second)
	}

	mws.updateTaskProgress(task.ID, 100)
	return nil
}

// executeBalanceTask executes a cluster balance operation
func (mws *MaintenanceWorkerService) executeBalanceTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// This would integrate with SeaweedFS balance operations
	glog.V(2).Infof("Executing cluster balance operation")

	// Simulate balance operation
	for progress := 20; progress < 100; progress += 20 {
		mws.updateTaskProgress(task.ID, float64(progress))
		time.Sleep(8 * time.Second) // Balance operations take longer
	}

	mws.updateTaskProgress(task.ID, 100)
	return nil
}

// executeClusterReplicationTask executes a cluster-to-cluster replication operation
func (mws *MaintenanceWorkerService) executeClusterReplicationTask(task *MaintenanceTask) error {
	mws.updateTaskProgress(task.ID, 10)

	// Extract parameters
	sourcePath, _ := task.Parameters["source_path"].(string)
	targetCluster, _ := task.Parameters["target_cluster"].(string)
	targetPath, _ := task.Parameters["target_path"].(string)
	replicationMode, _ := task.Parameters["replication_mode"].(string)
	fileSize, _ := task.Parameters["file_size"].(int64)
	checksum, _ := task.Parameters["checksum"].(string)

	glog.V(2).Infof("Executing cluster replication: %s -> %s:%s (mode: %s)",
		sourcePath, targetCluster, targetPath, replicationMode)

	mws.updateTaskProgress(task.ID, 20)

	// Step 1: Verify source file exists and get metadata
	err := mws.verifySourceFile(sourcePath, checksum)
	if err != nil {
		return fmt.Errorf("source file verification failed: %v", err)
	}

	mws.updateTaskProgress(task.ID, 40)

	// Step 2: Establish connection to target cluster
	err = mws.connectToTargetCluster(targetCluster)
	if err != nil {
		return fmt.Errorf("failed to connect to target cluster %s: %v", targetCluster, err)
	}

	mws.updateTaskProgress(task.ID, 60)

	// Step 3: Transfer file data
	err = mws.transferFile(sourcePath, targetCluster, targetPath, fileSize, replicationMode)
	if err != nil {
		return fmt.Errorf("file transfer failed: %v", err)
	}

	mws.updateTaskProgress(task.ID, 90)

	// Step 4: Verify transfer success
	err = mws.verifyTransfer(targetCluster, targetPath, checksum)
	if err != nil {
		return fmt.Errorf("transfer verification failed: %v", err)
	}

	mws.updateTaskProgress(task.ID, 100)
	glog.V(2).Infof("Cluster replication task %s completed successfully", task.ID)
	return nil
}

// verifySourceFile checks if source file exists and matches expected checksum
func (mws *MaintenanceWorkerService) verifySourceFile(sourcePath, expectedChecksum string) error {
	// This would integrate with SeaweedFS filer to verify file existence and checksum
	// For now, simulate the verification
	glog.V(3).Infof("Verifying source file: %s", sourcePath)

	// In real implementation:
	// 1. Call filer to check file existence
	// 2. Calculate or retrieve file checksum
	// 3. Compare with expected checksum

	time.Sleep(2 * time.Second) // Simulate verification time
	return nil
}

// connectToTargetCluster establishes connection to the target cluster
func (mws *MaintenanceWorkerService) connectToTargetCluster(targetCluster string) error {
	glog.V(3).Infof("Connecting to target cluster: %s", targetCluster)

	// In real implementation:
	// 1. Parse target cluster connection details
	// 2. Establish gRPC connection to target filer
	// 3. Authenticate if required
	// 4. Test connection

	time.Sleep(1 * time.Second) // Simulate connection time
	return nil
}

// transferFile performs the actual file transfer between clusters
func (mws *MaintenanceWorkerService) transferFile(sourcePath, targetCluster, targetPath string, fileSize int64, mode string) error {
	glog.V(3).Infof("Transferring file %s to %s:%s (size: %d bytes, mode: %s)",
		sourcePath, targetCluster, targetPath, fileSize, mode)

	// In real implementation, this would:
	// 1. Open source file stream from local filer
	// 2. Create target file in remote cluster
	// 3. Stream data with progress updates
	// 4. Handle different replication modes (sync/async/backup)

	// Simulate transfer with progress updates
	transferDuration := 10 * time.Second
	if mode == "sync" {
		transferDuration = 5 * time.Second // Faster for sync mode
	} else if mode == "backup" {
		transferDuration = 15 * time.Second // Slower for backup mode
	}

	steps := 10
	stepDuration := transferDuration / time.Duration(steps)

	for i := 0; i < steps; i++ {
		time.Sleep(stepDuration)
		// Progress updates are handled by the main task execution
	}

	return nil
}

// verifyTransfer verifies the transferred file in the target cluster
func (mws *MaintenanceWorkerService) verifyTransfer(targetCluster, targetPath, expectedChecksum string) error {
	glog.V(3).Infof("Verifying transferred file: %s:%s", targetCluster, targetPath)

	// In real implementation:
	// 1. Connect to target cluster filer
	// 2. Check file existence at target path
	// 3. Verify file size and checksum
	// 4. Optionally test file accessibility

	time.Sleep(1 * time.Second) // Simulate verification time
	return nil
}

// updateTaskProgress updates the progress of a task
func (mws *MaintenanceWorkerService) updateTaskProgress(taskID string, progress float64) {
	if mws.queue != nil {
		mws.queue.UpdateTaskProgress(taskID, progress)
	}
}

// GetStatus returns the current status of the worker
func (mws *MaintenanceWorkerService) GetStatus() map[string]interface{} {
	return map[string]interface{}{
		"worker_id":      mws.workerID,
		"address":        mws.address,
		"running":        mws.running,
		"capabilities":   mws.capabilities,
		"max_concurrent": mws.maxConcurrent,
		"current_tasks":  len(mws.currentTasks),
		"task_details":   mws.currentTasks,
	}
}

// SetQueue sets the maintenance queue for the worker
func (mws *MaintenanceWorkerService) SetQueue(queue *MaintenanceQueue) {
	mws.queue = queue
}

// SetAdminClient sets the admin client for the worker
func (mws *MaintenanceWorkerService) SetAdminClient(client *AdminServer) {
	mws.adminClient = client
}

// SetCapabilities sets the worker capabilities
func (mws *MaintenanceWorkerService) SetCapabilities(capabilities []MaintenanceTaskType) {
	mws.capabilities = capabilities
}

// SetMaxConcurrent sets the maximum concurrent tasks
func (mws *MaintenanceWorkerService) SetMaxConcurrent(max int) {
	mws.maxConcurrent = max
}

// SetHeartbeatInterval sets the heartbeat interval (placeholder for future use)
func (mws *MaintenanceWorkerService) SetHeartbeatInterval(interval time.Duration) {
	// Future implementation for configurable heartbeat
}

// SetTaskRequestInterval sets the task request interval (placeholder for future use)
func (mws *MaintenanceWorkerService) SetTaskRequestInterval(interval time.Duration) {
	// Future implementation for configurable task requests
}

// MaintenanceWorkerCommand represents a standalone maintenance worker command
type MaintenanceWorkerCommand struct {
	workerService *MaintenanceWorkerService
}

// NewMaintenanceWorkerCommand creates a new worker command
func NewMaintenanceWorkerCommand(workerID, address, adminServer string) *MaintenanceWorkerCommand {
	return &MaintenanceWorkerCommand{
		workerService: NewMaintenanceWorkerService(workerID, address, adminServer),
	}
}

// Run starts the maintenance worker as a standalone service
func (mwc *MaintenanceWorkerCommand) Run() error {
	// Generate worker ID if not provided
	if mwc.workerService.workerID == "" {
		hostname, _ := os.Hostname()
		mwc.workerService.workerID = fmt.Sprintf("worker-%s-%d", hostname, time.Now().Unix())
	}

	// Start the worker service
	err := mwc.workerService.Start()
	if err != nil {
		return fmt.Errorf("failed to start maintenance worker: %v", err)
	}

	// Wait for interrupt signal
	select {}
}
